[gd_scene load_steps=21 format=3 uid="uid://djd1vlqngjw7q"]

[ext_resource type="Script" path="res://world.gd" id="1_e0mqq"]
[ext_resource type="PackedScene" uid="uid://bnx0suk12kbe7" path="res://player/camera_2d.tscn" id="1_rwewr"]
[ext_resource type="PackedScene" uid="uid://d2ufq10tfielv" path="res://hud.tscn" id="2_48vjr"]
[ext_resource type="Texture2D" uid="uid://c85oo77ii5fh3" path="res://area.png" id="2_m7tbw"]
[ext_resource type="Script" path="res://obstacles/Spawner.gd" id="7_382jv"]
[ext_resource type="PackedScene" uid="uid://b4pur0b14honv" path="res://obstacles/Roca.tscn" id="8_1mkq8"]
[ext_resource type="PackedScene" uid="uid://bpqfvk37i5qrj" path="res://obstacles/Tree.tscn" id="9_50idv"]
[ext_resource type="PackedScene" uid="uid://cnafivlc53lve" path="res://player/player.tscn" id="9_ttbw3"]
[ext_resource type="Texture2D" uid="uid://byfye1dnxhmle" path="res://race.png" id="9_urls3"]
[ext_resource type="PackedScene" uid="uid://8lb53vcktgoj" path="res://monster/monster.tscn" id="10_c5fy1"]
[ext_resource type="PackedScene" uid="uid://dk65bmpqlrje7" path="res://obstacles/Car.tscn" id="10_cqg1k"]
[ext_resource type="PackedScene" uid="uid://cpqkd3oblukr4" path="res://obstacles/Estrella.tscn" id="10_uk2yb"]
[ext_resource type="PackedScene" uid="uid://bbaemg5lya6u" path="res://obstacles/peasant.tscn" id="11_2s2y2"]
[ext_resource type="PackedScene" uid="uid://bokfk4qiobcvt" path="res://obstacles/forest.tscn" id="12_y0uy2"]
[ext_resource type="PackedScene" uid="uid://pqnn65no0nxq" path="res://obstacles/long_rock.tscn" id="13_he46a"]
[ext_resource type="PackedScene" uid="uid://8ivkm34k71ew" path="res://obstacles/super_forest.tscn" id="14_xocd5"]
[ext_resource type="AudioStream" uid="uid://b8nqxbq20d1l8" path="res://transporte.ogg" id="17_7x6ha"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_x40ey"]
texture = ExtResource("9_urls3")
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSet" id="TileSet_w3rov"]
sources/0 = SubResource("TileSetAtlasSource_x40ey")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xrfpu"]
size = Vector2(14868, 332)

[node name="world" type="Node2D"]
script = ExtResource("1_e0mqq")

[node name="HUD" parent="." instance=ExtResource("2_48vjr")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
grow_horizontal = 1
grow_vertical = 1

[node name="TileMap" type="TileMap" parent="."]
modulate = Color(1, 1, 1, 0.576471)
light_mask = 2
visibility_layer = 2
tile_set = SubResource("TileSet_w3rov")
format = 2
layer_0/tile_data = PackedInt32Array(196607, 0, 0, 262143, 0, 1, 131072, 65536, 0, 196608, 65536, 1, 131073, 0, 0, 196609, 0, 1, 131074, 65536, 0, 196610, 65536, 1, 131075, 0, 0, 196611, 0, 1, 131076, 65536, 0, 196612, 65536, 1, 131077, 0, 0, 196613, 0, 1, 131078, 65536, 0, 196614, 65536, 1, 131079, 0, 0, 196615, 0, 1, 131080, 65536, 0, 196616, 65536, 1, 131081, 0, 0, 196617, 0, 1, 131082, 65536, 0, 196618, 65536, 1, 131083, 0, 0, 196619, 0, 1, 131084, 65536, 0, 196620, 65536, 1, 196589, 0, 0, 262125, 0, 1, 196590, 65536, 0, 262126, 65536, 1, 196591, 0, 0, 262127, 0, 1, 196592, 65536, 0, 262128, 65536, 1, 196593, 0, 0, 262129, 0, 1, 196594, 65536, 0, 262130, 65536, 1, 196595, 0, 0, 262131, 0, 1, 196596, 65536, 0, 262132, 65536, 1, 196597, 0, 0, 262133, 0, 1, 196598, 65536, 0, 262134, 65536, 1, 196599, 0, 0, 262135, 0, 1, 196600, 65536, 0, 262136, 65536, 1, 196601, 0, 0, 262137, 0, 1, 196602, 65536, 0, 262138, 65536, 1, 196603, 0, 0, 262139, 0, 1, 196604, 65536, 0, 262140, 65536, 1, 196605, 0, 0, 262141, 0, 1, 196606, 65536, 0, 262142, 65536, 1, 131085, 0, 0, 196621, 0, 1, 131086, 65536, 0, 196622, 65536, 1, 131087, 0, 0, 196623, 0, 1, 131088, 65536, 0, 196624, 65536, 1, 131089, 0, 0, 196625, 0, 1, 131090, 65536, 0, 196626, 65536, 1, 131091, 0, 0, 196627, 0, 1, 131092, 65536, 0, 196628, 65536, 1, 131093, 0, 0, 196629, 0, 1, 131094, 65536, 0, 196630, 65536, 1, 131095, 0, 0, 196631, 0, 1, 131096, 65536, 0, 196632, 65536, 1, 131097, 0, 0, 196633, 0, 1, 131098, 65536, 0, 196634, 65536, 1, 131099, 0, 0, 196635, 0, 1, 131100, 65536, 0, 196636, 65536, 1, 131101, 0, 0, 196637, 0, 1, 131102, 65536, 0, 196638, 65536, 1, 131103, 0, 0, 196639, 0, 1, 131104, 65536, 0, 196640, 65536, 1, 131105, 0, 0, 196641, 0, 1, 131106, 65536, 0, 196642, 65536, 1, 131107, 0, 0, 196643, 0, 1, 131108, 65536, 0, 196644, 65536, 1, 131109, 0, 0, 196645, 0, 1, 131110, 65536, 0, 196646, 65536, 1, 196587, 0, 0, 262123, 0, 1, 196588, 65536, 0, 262124, 65536, 1, 196585, 0, 0, 262121, 0, 1, 196586, 65536, 0, 262122, 65536, 1, 196583, 0, 0, 262119, 0, 1, 196584, 65536, 0, 262120, 65536, 1, 196581, 0, 0, 262117, 0, 1, 196582, 65536, 0, 262118, 65536, 1, 196579, 0, 0, 262115, 0, 1, 196580, 65536, 0, 262116, 65536, 1, 196577, 0, 0, 262113, 0, 1, 196578, 65536, 0, 262114, 65536, 1, 196575, 0, 0, 262111, 0, 1, 196576, 65536, 0, 262112, 65536, 1, 196573, 0, 0, 262109, 0, 1, 196574, 65536, 0, 262110, 65536, 1, 196571, 0, 0, 262107, 0, 1, 196572, 65536, 0, 262108, 65536, 1, 196569, 0, 0, 262105, 0, 1, 196570, 65536, 0, 262106, 65536, 1, 196567, 0, 0, 262103, 0, 1, 196568, 65536, 0, 262104, 65536, 1, 196565, 0, 0, 262101, 0, 1, 196566, 65536, 0, 262102, 65536, 1, 196563, 0, 0, 262099, 0, 1, 196564, 65536, 0, 262100, 65536, 1, 196561, 0, 0, 262097, 0, 1, 196562, 65536, 0, 262098, 65536, 1, 196559, 0, 0, 262095, 0, 1, 196560, 65536, 0, 262096, 65536, 1, 131111, 0, 0, 196647, 0, 1, 131112, 65536, 0, 196648, 65536, 1, 131113, 0, 0, 196649, 0, 1, 131114, 65536, 0, 196650, 65536, 1, 131115, 0, 0, 196651, 0, 1, 131116, 65536, 0, 196652, 65536, 1, 131117, 0, 0, 196653, 0, 1, 131118, 65536, 0, 196654, 65536, 1, 131119, 0, 0, 196655, 0, 1, 131120, 65536, 0, 196656, 65536, 1, 131121, 0, 0, 196657, 0, 1, 131122, 65536, 0, 196658, 65536, 1, 131123, 0, 0, 196659, 0, 1, 131124, 65536, 0, 196660, 65536, 1)

[node name="Camera2D" parent="." instance=ExtResource("1_rwewr")]
limit_smoothed = true

[node name="fondo" type="Node" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="fondo"]
layer = -1

[node name="ParallaxLayer" type="ParallaxLayer" parent="fondo/ParallaxBackground"]
motion_mirroring = Vector2(2128, 1964)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="fondo/ParallaxBackground/ParallaxLayer"]
scale = Vector2(4, 4)
texture = ExtResource("2_m7tbw")
centered = false
metadata/_edit_lock_ = true

[node name="Spawner" type="Node2D" parent="."]
position = Vector2(1, 1191)
script = ExtResource("7_382jv")

[node name="ObstacleSpawn" type="Timer" parent="Spawner"]

[node name="ObstacleSpawn2" type="Timer" parent="Spawner"]

[node name="decoration" type="Node" parent="."]

[node name="Roca4" parent="decoration" instance=ExtResource("8_1mkq8")]
position = Vector2(-85, 288)

[node name="Roca3" parent="decoration" instance=ExtResource("8_1mkq8")]
position = Vector2(228, 127)

[node name="Tree2" parent="decoration" instance=ExtResource("9_50idv")]
position = Vector2(218, 2672)

[node name="Estrella" parent="decoration" instance=ExtResource("10_uk2yb")]
position = Vector2(231, 161)

[node name="Car" parent="decoration" instance=ExtResource("10_cqg1k")]
position = Vector2(-118, 263)

[node name="Peasant" parent="decoration" instance=ExtResource("11_2s2y2")]
position = Vector2(193, 264)

[node name="Forest" parent="decoration" instance=ExtResource("12_y0uy2")]
position = Vector2(128, 80)

[node name="Forest2" parent="decoration" instance=ExtResource("12_y0uy2")]
position = Vector2(-134, -88)

[node name="Forest3" parent="decoration" instance=ExtResource("12_y0uy2")]
position = Vector2(-252, -86)

[node name="LongRock" parent="decoration" instance=ExtResource("13_he46a")]
position = Vector2(-113, 108)

[node name="SuperForest" parent="decoration" instance=ExtResource("14_xocd5")]
position = Vector2(-315, 64)

[node name="Tree" parent="decoration" instance=ExtResource("9_50idv")]
position = Vector2(219, 1531)

[node name="despawn" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="despawn"]
position = Vector2(0, -1785)
shape = SubResource("RectangleShape2D_xrfpu")

[node name="Player" parent="." instance=ExtResource("9_ttbw3")]

[node name="Monster" parent="." instance=ExtResource("10_c5fy1")]
modulate = Color(0.784314, 0, 0.207843, 0.576471)
position = Vector2(-280, 1004)

[node name="Monster2" parent="." instance=ExtResource("10_c5fy1")]
modulate = Color(0.0666667, 0.690196, 0.513726, 0.576471)
position = Vector2(10, -198)

[node name="BGM" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_7x6ha")
volume_db = -10.0

[connection signal="timeout" from="Spawner/ObstacleSpawn" to="Spawner" method="_on_obstacle_spawn_timeout"]
[connection signal="timeout" from="Spawner/ObstacleSpawn2" to="Spawner" method="_on_obstacle_spawn_2_timeout"]
[connection signal="body_entered" from="despawn" to="." method="_on_despawn_body_entered"]
